# apps/api/src/app/app.module.ts
@@ -2,6 +2,7 @@ import { Module } from '@nestjs/common';
 import { ConfigModule } from '@nestjs/config';
 import { AbsencesModule } from './absences/absences.module';
 import { AccountsModule } from './accounts/accounts.module';
+import { AttachmentsModule } from './attachments/attachments.module';
 import { AuthModule } from './auth/auth.module';
 import { EmployeesModule } from './employees/employees.module';
 import { ErpExportModule } from './erp-export/erp-export.module';
@@ -30,6 +31,7 @@ import { WorkSchedulesModule } from './work-schedules/work-schedules.module';
     AccountsModule,
     RequestsModule,
     AbsencesModule,
+    AttachmentsModule,
     ViolationsModule,
     ErpExportModule,
   ],
